# BaldBot-rs

./: .gitignore  Cargo.toml
src/: commands.rs  main.rs
src/utils/: mod.rs  swear_detector.rs
